k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aura-frontend
  namespace: aura
  labels:
    app: aura-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aura-frontend
  template:
    metadata:
      labels:
        app: aura-frontend
    spec:
      containers:
        - name: frontend
          image: bittush8789/aura-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
